removed german language yaml

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ credits: '<p>Created with &hearts; by <a href="https://www.facebook.com/Herro.An
 
 # Main author of the website
 # See > authors.yml
-author: phlow
+author: Anne
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
