--- a/_config.yml
+++ b/_config.yml
@@ -159,16 +159,16 @@ bing_webmastertools_id:    '0FB4C028ABCF07C908C54386ABD2D97F'
 #                                                 More information » https://mathiasbynens.be/notes/touch-icons
 
 favicon-32x32:                          'favicon-32x32.png'
-touch-icon-192x192:                     'touch-icon-192x192.png'
-apple-touch-icon-180x180-precomposed:   'apple-touch-icon-180x180-precomposed.png'
-apple-touch-icon-152x152-precomposed:   'apple-touch-icon-152x152-precomposed.png'
-apple-touch-icon-144x144-precomposed:   'apple-touch-icon-144x144-precomposed.png'
-apple-touch-icon-120x120-precomposed:   'apple-touch-icon-120x120-precomposed.png'
-apple-touch-icon-114x114-precomposed:   'apple-touch-icon-114x114-precomposed.png'
-apple-touch-icon-76x76-precomposed:     'apple-touch-icon-76x76-precomposed.png'
-apple-touch-icon-72x72-precomposed:     'apple-touch-icon-72x72-precomposed.png'
-apple-touch-icon-precomposed:           'apple-touch-icon-precomposed.png'
-msapplication_tileimage:                'msapplication_tileimage.png'               # Size 144x144
+touch-icon-192x192:                     'android-icon-192x192.png'
+apple-touch-icon-180x180-precomposed:   'apple-icon-180x180.png'
+apple-touch-icon-152x152-precomposed:   'apple-icon-152x152.png'
+apple-touch-icon-144x144-precomposed:   'apple-icon-144x144.png'
+apple-touch-icon-120x120-precomposed:   'apple-icon-120x120.png'
+apple-touch-icon-114x114-precomposed:   'apple-icon-114x114.png'
+apple-touch-icon-76x76-precomposed:     'apple-icon-76x76.png'
+apple-touch-icon-72x72-precomposed:     'apple-icon-72x72.png'
+apple-touch-icon-precomposed:           'apple-icon.png'
+msapplication_tileimage:                'ms-icon-310x310.png'               # Size 144x144
 msapplication_tilecolor:                '#fabb00'
 
 
