--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://phlow.github.io/feeling-responsive/images/'
+urlimg: 'https://herroannekim.github.io/images/'
 
 
 # Logo size is 600x80 pixels
