--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@
 Anne: 
   name: "Anne Kim"
   siterole: "the man"
-  # uri: http://phlow.de/
+  uri: herroannekim.github.io/about
   # email:
   twitter: "@herroannekim"
 
